theme/style.css
/* ... */
ul.dropdown_form li:last-child a         { border-right: none; } /* Doesn't work in IE */
ul.dropdown_form li.hover,
ul.dropdown_form li:hover                {
    background-image : url(images/nav_fill_hover.png);

    position: relative;
}

ul.dropdown_form li.hover a              { color: #37ffad;  }
ul.dropdown_form ul.sub_menu a:hover		            {   text-decoration: underline;}
ul.dropdown_form ul.sub_menu a            {   display: inline; padding:0px; }
/*
        LEVEL TWO
*/
ul.dropdown_form ul 						{ width: 200px; visibility: hidden; position: absolute; top: 100%; left: 0px; }
ul.dropdown_form ul li 					{ font-weight: normal; background: #357768;
                         float: none; }
ul.dropdown_form ul li:hover 					{
                         float: none; }

/* IE 6 & 7 Needs Inline Block */
ul.dropdown_form ul li a					{width: 100%; display: inline-block;}




.ib-news-banner {

    position: relative;

    background-image: url(../plugins/portal/images/banner.png);
    width:780px;
    height:600px;

    outline: 2px solid rgb(56, 204, 170);
}

.ib-news-banner-text {
    text-align: center;
    width: 100%;
    font-weight: bold;
    padding-top: 21px;
    font-size: 22px;
    color: rgb(255, 224, 178);
    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
}




.ibutton_attention {
background-color: rgba(53, 111, 119, 0.7);
border: 3px solid #1F4145;
display: inline-block;
color: #A9F8FC;
font-family: Verdana;
font-size: 26px;
font-weight: bold;
padding: 24px;
text-decoration: none;
text-shadow: 2px 1px 0px #063F45;
margin: 3px;
}.ibutton_attention:hover {
  background-color:#5BA1A9;
}.ibutton_attention:active {
  position:relative;
  top:1px;
}

.ibutton_attention2 {
background-color: rgba(199, 146, 67, 0.7);
border: 3px solid rgb(219, 214, 85);
display: inline-block;
color: rgb(253, 248, 119);
font-family: Verdana;
font-size: 26px;
font-weight: bold;
padding: 24px;
text-decoration: none;
text-shadow: 2px 1px 0px rgb(69, 61, 6);
margin: 3px;
}.ibutton_attention2:hover {
  background-color: rgb(192, 179, 81);
}.ibutton_attention2:active {
  position:relative;
  top:1px;
}

.ib-news-banner-play {
    position: absolute;
    top: 100px;
    left:50px;
    max-width: 255px;
}

.ib-news-banner-play span {
    margin-top: 50px;
    float: left;
    font-weight: bold;
    padding-top: 6px;
    font-size: 16px;
    color: rgb(17, 224, 150);
    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);

    text-align: right;
}


.ib-news-banner-get-involved {
    position: absolute;
    top: 380px;
    right:50px;
    max-width: 255px;
}
.ib-news-banner-get-involved button {

}

.ib-news-banner-get-involved span {
    float: right;
    font-weight: bold;
    margin-bottom: 40px;
    font-size: 16px;
    color: rgb(224, 199, 17);
    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
    max-width: 255px;
    text-align: right;
    margin-right: 17px;
}


.ib-gi-section-image {
    margin:0 auto;
    outline: 2px solid rgb(0, 0, 0);
    width:500px;
    height:400px;

}

.ib-gi-section {
    text-align: center;
    width: 100%;
}

.ib-gi-section-link {
    font-size: 25px;
    margin-bottom: 20px;
    margin-top: 50px;
}

.ib-gi-section-image-code {
    background-image: url(../plugins/get-involved/images/code.png);
}
.ib-gi-section-image-models {
    background-image: url(../plugins/get-involved/images/models.png);
}
.ib-gi-section-image-art {
    background-image: url(../plugins/get-involved/images/art.png);
}

.ib-chatbox-wrapper {
    width:780px;
    height:80px;
    margin-top:5px;
    margin-bottom:5px;
    border: 1px solid black;
    background-color: #083420;
}

.ib-welcome {
    width: 200px;
    height:100%;
    float:left;
    outline: 1px solid black;
    font-size: 10px;
}

.ib-chatbox {
    width: 480px;
    height:100%;
    float:left;
}
.ib-chatters {
    width:94px;
    height:80px;
    float:left;
    outline: 1px solid black;
    background-color: rgb(32, 71, 51);
    font-size: 10px;
    padding:3px;
}

.ib-chatbox-content {
    width:472px;
    height:60px;
    padding-left:5px;
    font-size: 10px;
}

.ib-chat-input input {
    width:475px;
    background-color: rgb(56, 112, 84);
    border-color: rgb(18, 173, 136);
}

*:focus {
    outline: 1px dashed #56E4A5;
}

